pulldown-cmark-mdcat/tests/snapshots/render/dumb@commonmark-spec-111-indented_code_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/111-indented_code_blocks.md
---

chunk1

chunk2



chunk3
